plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}

group 'ru.hse.trilis.blackjack'
version '1.0-SNAPSHOT'

mainClassName = 'ru.hse.trilis.blackjack.BlackJackUi'
sourceCompatibility = 11

javafx {
    version = "13"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

repositories {
    mavenCentral()
}

dependencies {
    compile 'org.jetbrains:annotations:16.0.2'
}